# oidc_study

./: .gitignore
dev_shm_server/: CAVEATS.md  CLAUDE.md  Cargo.toml  Dockerfile  Prompts.md  README.md  USE_CASES.md  build.rs  docker-compose.yml
dev_shm_server/examples/: bench.rs  echo_server.rs  ez_bridge_demo.rs  grpc_transfer.rs  resource_bench.rs
dev_shm_server/proto/: shm_transfer.proto
dev_shm_server/proto/enforcer/v1/: data_scope_type.proto  ez_data_scope.proto  ez_isolate_bridge.proto  ez_payload.proto  isolate_bridge.proto  isolate_data_scope.proto  isolate_ez_bridge.proto  isolate_state.proto
dev_shm_server/src/: channel.rs  client.rs  ez_bridge.rs  lib.rs  protocol.rs  ring.rs  server.rs  service.rs  shm.rs
